cmake_minimum_required(VERSION 3.14)
project(BOJ)

set(CMAKE_CXX_STANDARD 14)

add_executable(BOJ BOJ10951.cpp BOJ10952.cpp HelloWorld.cpp BOJ10953.cpp BOJ11021.cpp BOJ11022.cpp BOJ11718.cpp)
add_executable(HelloWorld HelloWorld.cpp)
add_executable(BOJ10952 BOJ10952.cpp)
add_executable(BOJ10953 BOJ10953.cpp)