cmake_minimum_required(VERSION 3.14)
project(BOJ)

set(CMAKE_CXX_STANDARD 14)

add_executable(BOJ BOJ10951.cpp BOJ10952.cpp BOJ10953.cpp BOJ11021.cpp BOJ11022.cpp BOJ11718.cpp BOJ11719.cpp BOJ2741.cpp BOJ2742.cpp BOJ2739.cpp)
add_executable(BOJ11721 BOJ11721.cpp)
add_executable(BOB11720 BOB11720.cpp)
add_executable(BOJ2741 BOJ2741.cpp)
add_executable(BOJ2742 BOJ2742.cpp)
add_executable(BOJ2739 BOJ2739.cpp)
add_executable(BOJ1924 BOJ1924.cpp)
add_executable(BOJ8393 BOJ8393.cpp)
add_executable(BOJ10818 BOJ10818.cpp)