cmake_minimum_required(VERSION 3.14)
project(BOJ)

set(CMAKE_CXX_STANDARD 14)

add_executable(BOJ 입출력/BOJ10951.cpp 입출력/BOJ10952.cpp 입출력/BOJ10953.cpp 입출력/BOJ11021.cpp 입출력/BOJ11022.cpp 입출력/BOJ11718.cpp 입출력/BOJ11719.cpp 입출력/BOJ2741.cpp 입출력/BOJ2742.cpp 입출력/BOJ2739.cpp)
add_executable(BOJ11721 입출력/BOJ11721.cpp)
add_executable(BOB11720 입출력/BOB11720.cpp)
add_executable(BOJ2741 입출력/BOJ2741.cpp)
add_executable(BOJ2742 입출력/BOJ2742.cpp)
add_executable(BOJ2739 입출력/BOJ2739.cpp)
add_executable(BOJ1924 입출력/BOJ1924.cpp)
add_executable(BOJ8393 입출력/BOJ8393.cpp)
add_executable(BOJ10818 입출력/BOJ10818.cpp)
add_executable(BOJ2438 입출력/BOJ2438.cpp)
add_executable(BOJ2439 입출력/BOJ2439.cpp)
add_executable(BOJ2440 입출력/BOJ2440.cpp)
add_executable(BOJ2441 입출력/BOJ2441.cpp)
add_executable(BOJ1463 DP/BOJ1463.cpp)
add_executable(BOJ11726 DP/BOJ11726.cpp)
add_executable(BOJ11727 DP/BOJ11727.cpp)
add_executable(BOJ9095 DP/BOJ9095.cpp)